--- a/src/Components/Note/Note.css
+++ b/src/Components/Note/Note.css
@@ -1,14 +1,25 @@
 .note {
     padding: 25px;
-    height: 280px;
-    width: 260px;
+    height: 680px;
+    width: 100%;
+    gap: 5px;
     display: flex;
     flex-direction: column;
-    background-color: blueviolet;
+    justify-content: space-between;
     border-radius: 30px;
   }
   
-  .note_text {
+  .note_body{
+    width: 100%;
+    height: 100%;
+    gap: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+
+  /* .note_text {
     flex: 1;
     resize: none;
     background-color: transparent;
@@ -17,19 +28,45 @@
     outline: none;
     border: none;
   }
-  
+   */
   .note_footer {
     display: flex;
     justify-content: space-between;
-    align-items: center;
   }
   
-  .note_footer img {
+  .note_footer button {
+    background:transparent;
+    border:none;
     cursor: pointer;
     opacity: 0;
     transition: 300ms;
+    font-size: x-large;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform ;
+    transform-origin: center;
   }
   
-  .note:hover .note_footer img {
+  .note:hover .note_footer button {
     opacity: 1;
   }
+  .toolbar-button{
+    background:transparent;
+    border:none;
+    cursor: pointer;
+    padding: 3px;
+    font-size: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: transform ;
+    transform-origin: center;
+}
+
+  .quill-toolbar {
+    width: 100%;
+    height: 90%;
+    border: none;
+    font-size: larger;
+}
